# CLEpy-MotM

./: .gitignore  CONTRIBUTING.md  LICENSE  Pipfile  README.md  requirements.in  requirements.txt
Arrow/: Arrow.ipynb
Bokeh/: DowJones30Companies.csv  bokeh-demo.ipynb
Boltons/: Boltons.ipynb
Click/: Click.md  arguments.py  commands.py  hello.py  options.py  utilities.py
Connexion/: README.md
Dask/: README.md  dask-demo.ipynb  make-demo-data.ipynb  pandas-demo.ipynb
Diagrams/: diagrams_example.py  mermaid_example.txt
Django/: PITCHME.md  PITCHME.yaml  README.md
Fire/: Fire.ipynb  calculator.py
FuzzyWuzzy/: FuzzyWuzzy.ipynb  colors.txt
HTTPX/: HTTPX.ipynb
Kivy/: Kivy.ipynb  boxlayout.kv  boxlayout.py  databinding.kv  databinding.py  hello.kv  hello.py  widgets.kv  widgets.py
Pandas/: Pandas-motm.ipynb
Paramiko/: README  paramiko-motm-requirements.txt  paramiko-motm.ipynb
Pelican/: Pelican.md
Pip-Tools/: Pip-Tools.ipynb  requirements.in  requirements.txt
Plotnine/: Plotnine.ipynb
PyJWT/: PyJWT.ipynb
PyQuery/: PyQuery-MotM.ipynb
Retry/: Retry.ipynb
Scrapy_nb/: CPL notebook.ipynb  Quotes base case.ipynb  quoteresult.jl  quoteresult.json
Selectolax/: pyproject.toml  slides.md  walkthrough.ipynb
Sphinx/: readme  sphinx.ipynb
Streamlit/: MoTM Streamlit.md  medium_app.py  pyproject.toml  small_app.py
Streamlit/data/: area_latlong.csv  small_carrier_data.csv
Tenacity/: Tenacity.ipynb
playwright/: 1_no_webdriver.ipynb  2_simple_login.py  3_multiple_pages.py  4_non_linked_elements.py  5_debugging.py  pyproject.toml  slides.md
(+57 files in other folders)
