[tool.poetry]
name = "playwright-motm"
version = "0.1.0"
description = ""
authors = ["calvinscottforbes <calvinscottforbes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.24.1"
requests = "^2.28.1"
bs4 = "^0.0.1"
snoop = "^0.4.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
